--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,13 +3,13 @@
     <head><link href="https://fonts.googleapis.com/css?family=Radley&display=swap" rel="stylesheet" />
     </head>
     
-    <body><div class="v2_9"><span class="v2_10"><img src="/frontend/src/dot-small-logo.png" height="140" width="140">&nbsp Dot</span><span class="v2_11">Dating and social app dedicated for people with physical disabilities. 
+    <body><div class="v2_9"><span class="v2_10"><img src="../src/dot-small-logo.png" height="140" width="140">&nbsp Dot</span><span class="v2_11">Dating and social app dedicated for people with physical disabilities. 
 
     </span>
     
     <!--<div class="v2_12"></div>-->
     <div class="v2_13"></div>
-    <a href="./agenor_login-page.html">
+    <a href="../src/agenor_login-page.html">
     <div class="v2_14">
         <div class="v2_15"></div>
         <span class="v2_16">Sign up</span>
@@ -75,7 +75,7 @@ body {
   position: absolute;
   top: 547px;
   left: 0px;
-  background-image: url(./dot_wavy-image.png);
+  background-image: url(../src/dot_wavy-image.png);
   
 }
 .v2_13 {
@@ -87,7 +87,7 @@ body {
   top: 641px;
   /*top: 500px;*/
   left: 0px;
-  background-image: url(./dot_wavy-image.png);
+  background-image: url(../src/dot_wavy-image.png);
 }
 .v2_14 {
   width: 281px;
