--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -9,7 +9,7 @@
     
     <!--<div class="v2_12"></div>-->
     <div class="v2_13"></div>
-    <a href="../src/agenor_login-page.html">
+    <a href="../src/login.html">
     <div class="v2_14">
         <div class="v2_15"></div>
         <span class="v2_16">Sign up</span>
