--- a/frontend/src/login.html
+++ b/frontend/src/login.html
@@ -22,11 +22,11 @@
           </div>
         </div>
         <!--<div class="emailButtonGreenBG">
-          <div class="emailButtonWhiteBGRound"></div>-->
+          <div class="emailButtonBGRound"></div>-->
           <div class="emailButtonGreenBG">
             <form>
               <!--<label for="email">email address2</label><br>-->
-              <input class="emailButtonWhiteBGRound" type="text" id="email" name="email" placeholder="email address"><br>
+              <input class="emailButtonBGRound" type="text" id="email" name="email" placeholder="email address"><br>
           </div>
           <!--<span class="emailText">email address</span>
         </div>-->
@@ -185,7 +185,7 @@
     overflow: hidden;
     border: 0px;
   }
-  .emailButtonWhiteBGRound {
+  .emailButtonBGRound {
     width: 393px;
     height: 40px;
     background: rgba(238, 238, 238, 1);
