--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,24 +3,24 @@
     <head><link href="https://fonts.googleapis.com/css?family=Radley&display=swap" rel="stylesheet" />
     </head>
     
-    <body><div class="v2_9"><span class="v2_10"><img src="../src/dot-small-logo.png" height="140" width="140">&nbsp Dot</span><span class="v2_11">Dating and social app dedicated for people with physical disabilities. 
+    <body><div class="pageBG"><span class="logoOuterBG"><img src="../src/dot-small-logo.png" height="140" width="140">&nbsp Dot</span><span class="sloganBG">Dating and social app dedicated for people with physical disabilities. 
 
     </span>
     
     <!--<div class="v2_12"></div>-->
-    <div class="v2_13"></div>
+    <div class="wavyBG"></div>
     <a href="../src/login.html">
-    <div class="v2_14">
-        <div class="v2_15"></div>
-        <span class="v2_16">Sign up</span>
-        <div class="v2_17">
+    <div class="signupButtonOuterBG">
+        <div class="signupButtonInnerBG"></div>
+        <span class="signupButtonText">Sign up</span>
+        <div class="signupButtonSmallSquare">
             <div class="name"></div>
             <div class="name"></div></div></div>
             </a>
-            <div class="v2_130">
-                <div class="v2_131"></div>
-                <span class="v2_132">Log in</span>
-                <div class="v2_133">
+            <div class="wavyBG0">
+                <div class="wavyBG1"></div>
+                <span class="wavyBG2">Log in</span>
+                <div class="wavyBG3">
                     <div class="name"></div>
                     <div class="name"></div></div></div>
 
@@ -32,7 +32,7 @@
 body {
   font-size: 14px;
 }
-.v2_9 {
+.pageBG {
   width: 100%;
   height: 1024px;
   background: rgba(255,255,255,1);
@@ -42,7 +42,7 @@ body {
   left: 0px;
   overflow: hidden;
 }
-.v2_10 {
+.logoOuterBG {
   width: 401px;
   color: rgba(0,0,0,1);
   position: absolute;
@@ -55,7 +55,7 @@ body {
   opacity: 1;
   text-align: left;
 }
-.v2_11 {
+.sloganBG {
   width: 100%;
   color: rgba(0,0,0,1);
   position: absolute;
@@ -78,7 +78,7 @@ body {
   background-image: url(../src/dot_wavy-image.png);
   
 }
-.v2_13 {
+.wavyBG {
   width: 100%;
   height: 389px;
   background: rgba(199,231,223,1);
@@ -89,10 +89,10 @@ body {
   left: 0px;
   background-image: url(../src/dot_wavy-image.png);
 }
-.v2_14 {
+.signupButtonOuterBG {
   width: 281px;
   height: 74px;
-  background: url("../images/v2_14.png");
+  background: url("../images/signupButtonOuterBG.png");
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
@@ -102,7 +102,7 @@ body {
   left: 107px;
   overflow: hidden;
 }
-.v2_15 {
+.signupButtonInnerBG {
   width: 281px;
   height: 74px;
   background: rgba(42,141,129,1);
@@ -116,7 +116,7 @@ body {
   border-bottom-right-radius: 30px;
   overflow: hidden;
 }
-.v2_16 {
+.signupButtonText {
   width: 127px;
   color: rgba(255,255,255,1);
   position: absolute;
@@ -129,10 +129,10 @@ body {
   opacity: 1;
   text-align: left;
 }
-.v2_17 {
+.signupButtonSmallSquare {
   width: 13px;
   height: 19px;
-  background: url("../images/v2_17.png");
+  background: url("../images/signupButtonSmallSquare.png");
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
@@ -149,10 +149,10 @@ body {
 .name {
   color: #fff;
 }
-.v2_130 {
+.wavyBG0 {
   width: 281px;
   height: 74px;
-  background: url("../images/v2_130.png");
+  background: url("../images/wavyBG0.png");
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
@@ -162,7 +162,7 @@ body {
   left: 439px;
   overflow: hidden;
 }
-.v2_131 {
+.wavyBG1 {
   width: 281px;
   height: 74px;
   background: rgba(53,182,151,1);
@@ -176,7 +176,7 @@ body {
   border-bottom-right-radius: 30px;
   overflow: hidden;
 }
-.v2_132 {
+.wavyBG2 {
   width: 127px;
   color: rgba(255,255,255,1);
   position: absolute;
@@ -189,10 +189,10 @@ body {
   opacity: 1;
   text-align: left;
 }
-.v2_133 {
+.wavyBG3 {
   width: 13px;
   height: 19px;
-  background: url("../images/v2_133.png");
+  background: url("../images/wavyBG3.png");
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
