--- a/frontend/src/aboutus.html
+++ b/frontend/src/aboutus.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html><head><link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet" /><link href="https://fonts.googleapis.com/css?family=Radley&display=swap" rel="stylesheet" /></head><body><div class="v22_112"><span class="v22_113">ABOUT US</span><span class="v22_114">copyright Ⓒ</span><div class="v22_115"><div class="v22_116"></div><div class="v22_117"></div><span class="v22_118">John Doe Doe
+<!DOCTYPE html><html><head><link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet" /><link href="https://fonts.googleapis.com/css?family=Radley&display=swap" rel="stylesheet" /></head><body><div class="pageBG"><span class="aboutUsText">ABOUT US</span><span class="copyrightText">copyright Ⓒ</span><div class="photo4OuterBG"><div class="photo4BottomImage"></div><div class="photo4BottomBG"></div><span class="photo4Text">John Doe Doe
     Lead Engineer</span></div><div class="v22_119"><div class="v22_120"></div><div class="v22_121"></div><span class="v22_122">Jane Doe Doe
     UX Designer</span></div><div class="v22_123"><div class="v22_124"></div><div class="v22_125"></div><span class="v22_126">Jane Doe Doe</span></div><div class="v22_127"><div class="v22_128"></div><div class="v22_129"></div><span class="v22_130">Kim Chi Soup
     UX Desginer</span></div><div class="v22_131"><div class="v22_132"></div><span class="v22_133">John Doe Doe</span><div class="v22_134"></div></div><div class="v22_187"><div class="v22_188"></div><span class="v22_189">Juan Rodriguez
@@ -8,7 +8,7 @@
     body {
       font-size: 14px;
     }
-    .v22_112 {
+    .pageBG {
       width: 100%;
       height: 1024px;
       background: rgba(196,214,241,1);
@@ -18,7 +18,7 @@
       left: 0px;
       overflow: hidden;
     }
-    .v22_113 {
+    .aboutUsText {
       width: 290px;
       color: rgba(255,255,255,1);
       position: absolute;
@@ -31,7 +31,7 @@
       opacity: 1;
       text-align: left;
     }
-    .v22_114 {
+    .copyrightText {
       width: 137px;
       color: rgba(76,76,76,1);
       position: absolute;
@@ -43,10 +43,10 @@
       opacity: 1;
       text-align: left;
     }
-    .v22_115 {
+    .photo4OuterBG {
       width: 243px;
       height: 320px;
-      background: url("../images/v22_115.png");
+      background: url("./login-logo.svg");
       background-repeat: no-repeat;
       background-position: center center;
       background-size: cover;
@@ -56,10 +56,10 @@
       left: 154px;
       overflow: hidden;
     }
-    .v22_116 {
+    .photo4BottomImage {
       width: 242px;
       height: 263px;
-      background: url("../images/v22_116.png");
+      background: url("noimage");
       background-repeat: no-repeat;
       background-position: center center;
       background-size: cover;
@@ -71,7 +71,7 @@
       border-top-right-radius: 10px;
       overflow: hidden;
     }
-    .v22_117 {
+    .photo4BottomBG {
       width: 243px;
       height: 57px;
       background: rgba(123,162,222,1);
@@ -81,7 +81,7 @@
       left: 0px;
       box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     }
-    .v22_118 {
+    .photo4Text {
       width: 128px;
       color: rgba(255,255,255,1);
       position: absolute;
