--- a/frontend/src/aboutus.html
+++ b/frontend/src/aboutus.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html><html><head><link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet" /><link href="https://fonts.googleapis.com/css?family=Radley&display=swap" rel="stylesheet" /></head><body><div class="pageBG"><span class="aboutUsText">ABOUT US</span><span class="copyrightText">copyright Ⓒ</span><div class="photo4OuterBG"><div class="photo4BottomImage"></div><div class="photo4BottomBG"></div><span class="photo4Text">John Doe Doe
-    Lead Engineer</span></div><div class="v22_119"><div class="v22_120"></div><div class="v22_121"></div><span class="v22_122">Jane Doe Doe
-    UX Designer</span></div><div class="v22_123"><div class="v22_124"></div><div class="v22_125"></div><span class="v22_126">Jane Doe Doe</span></div><div class="v22_127"><div class="v22_128"></div><div class="v22_129"></div><span class="v22_130">Kim Chi Soup
-    UX Desginer</span></div><div class="v22_131"><div class="v22_132"></div><span class="v22_133">John Doe Doe</span><div class="v22_134"></div></div><div class="v22_187"><div class="v22_188"></div><span class="v22_189">Juan Rodriguez
-    Lead Engineer</span><div class="v22_190"></div></div><div class="name"></div><div class="v22_136"><div class="v22_137"></div><div class="v22_138"></div><div class="v22_139"></div><div class="v22_140"><div class="v22_141"></div><span class="v22_142">About Us</span></div></div></div></body></html> <br/><br/> <style>* {
+    Lead Engineer</span></div><div class="photo2OuterBG"><div class="photo2BottomImage"></div><div class="photo2BottomBG"></div><span class="photo2Text">Jane Doe Doe
+    UX Designer</span></div><div class="photo5OuterBG"><div class="photo5BottomImage"></div><div class="photo5BottomBG"></div><span class="photo5Text">Jane Doe Doe</span></div><div class="photo3OuterBG"><div class="photo3BottomImage"></div><div class="photo3BottomBG"></div><span class="photo3Text">Kim Chi Soup
+    UX Desginer</span></div><div class="photo6OuterBG"><div class="photo6BottomImage"></div><span class="photo6BottomBG">John Doe Doe</span><div class="photo6Text"></div></div><div class="photo1OuterBG"><div class="photo1BottomImage"></div><span class="photo1BottomBG">Juan Rodriguez
+    Lead Engineer</span><div class="photo1Text"></div></div><div class="name"></div><div class="v22_136"><div class="v22_137"></div><div class="v22_138"></div><div class="v22_139"></div><div class="v22_140"><div class="v22_141"></div><span class="v22_142">About Us</span></div></div></div></body></html> <br/><br/> <style>* {
       box-sizing: border-box;
     }
     body {
@@ -93,10 +93,10 @@
       opacity: 1;
       text-align: center;
     }
-    .v22_119 {
+    .photo2OuterBG {
       width: 248px;
       height: 322px;
-      background: url("../images/v22_119.png");
+      background: url("./login-logo.svg");
       background-repeat: no-repeat;
       background-position: center center;
       background-size: cover;
@@ -107,10 +107,10 @@
       box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
       overflow: hidden;
     }
-    .v22_120 {
+    .photo2BottomImage {
       width: 247px;
       height: 258px;
-      background: url("../images/v22_120.png");
+      background: url("../images/photo2BottomImage.png");
       background-repeat: no-repeat;
       background-position: center center;
       background-size: cover;
@@ -122,7 +122,7 @@
       border-top-right-radius: 10px;
       overflow: hidden;
     }
-    .v22_121 {
+    .photo2BottomBG {
       width: 248px;
       height: 64px;
       background: rgba(123,162,222,1);
@@ -131,7 +131,7 @@
       top: 258px;
       left: 0px;
     }
-    .v22_122 {
+    .photo2Text {
       width: 120px;
       color: rgba(255,255,255,1);
       position: absolute;
@@ -143,10 +143,10 @@
       opacity: 1;
       text-align: center;
     }
-    .v22_123 {
+    .photo5OuterBG {
       width: 245px;
       height: 320px;
-      background: url("../images/v22_123.png");
+      background: url("./login-logo.svg");
       background-repeat: no-repeat;
       background-position: center center;
       background-size: cover;
@@ -157,10 +157,10 @@
       box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
       overflow: hidden;
     }
-    .v22_124 {
+    .photo5BottomImage {
       width: 245px;
       height: 254px;
-      background: url("../images/v22_124.png");
+      background: url("../images/photo5BottomImage.png");
       background-repeat: no-repeat;
       background-position: center center;
       background-size: cover;
@@ -172,7 +172,7 @@
       border-top-right-radius: 10px;
       overflow: hidden;
     }
-    .v22_125 {
+    .photo5BottomBG {
       width: 243px;
       height: 66px;
       background: rgba(123,162,222,1);
@@ -181,7 +181,7 @@
       top: 255px;
       left: 0px;
     }
-    .v22_126 {
+    .photo5Text {
       width: 124px;
       color: rgba(255,255,255,1);
       position: absolute;
@@ -193,10 +193,10 @@
       opacity: 1;
       text-align: left;
     }
-    .v22_127 {
+    .photo3OuterBG {
       width: 251px;
       height: 325px;
-      background: url("../images/v22_127.png");
+      background: url("./login-logo.svg");
       background-repeat: no-repeat;
       background-position: center center;
       background-size: cover;
@@ -206,10 +206,10 @@
       left: 873px;
       overflow: hidden;
     }
-    .v22_128 {
+    .photo3BottomImage {
       width: 251px;
       height: 261px;
-      background: url("../images/v22_128.png");
+      background: url("../images/photo3BottomImage.png");
       background-repeat: no-repeat;
       background-position: center center;
       background-size: cover;
@@ -221,7 +221,7 @@
       border-top-right-radius: 10px;
       overflow: hidden;
     }
-    .v22_129 {
+    .photo3BottomBG {
       width: 251px;
       height: 63px;
       background: rgba(123,162,222,1);
@@ -231,7 +231,7 @@
       left: 0px;
       box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     }
-    .v22_130 {
+    .photo3Text {
       width: 124px;
       color: rgba(255,255,255,1);
       position: absolute;
@@ -243,10 +243,10 @@
       opacity: 1;
       text-align: center;
     }
-    .v22_131 {
+    .photo6OuterBG {
       width: 248px;
       height: 320px;
-      background: url("../images/v22_131.png");
+      background: url("./login-logo.svg");
       background-repeat: no-repeat;
       background-position: center center;
       background-size: cover;
@@ -257,7 +257,7 @@
       box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
       overflow: hidden;
     }
-    .v22_132 {
+    .photo6BottomImage {
       width: 248px;
       height: 67px;
       background: rgba(123,162,222,1);
@@ -266,7 +266,7 @@
       top: 253px;
       left: 0px;
     }
-    .v22_133 {
+    .photo6BottomBG {
       width: 131px;
       color: rgba(255,255,255,1);
       position: absolute;
@@ -278,10 +278,10 @@
       opacity: 1;
       text-align: left;
     }
-    .v22_134 {
+    .photo6Text {
       width: 246px;
       height: 256px;
-      background: url("../images/v22_134.png");
+      background: url("../images/photo6Text.png");
       background-repeat: no-repeat;
       background-position: center center;
       background-size: cover;
@@ -293,10 +293,10 @@
       border-top-right-radius: 10px;
       overflow: hidden;
     }
-    .v22_187 {
+    .photo1OuterBG {
       width: 242px;
       height: 322px;
-      background: url("../images/v22_187.png");
+      background: url("./login-logo.svg");
       background-repeat: no-repeat;
       background-position: center center;
       background-size: cover;
@@ -307,7 +307,7 @@
       box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
       overflow: hidden;
     }
-    .v22_188 {
+    .photo1BottomImage {
       width: 242px;
       height: 65px;
       background: rgba(123,162,222,1);
@@ -316,7 +316,7 @@
       top: 256px;
       left: 0px;
     }
-    .v22_189 {
+    .photo1BottomBG {
       width: 136px;
       color: rgba(255,255,255,1);
       position: absolute;
@@ -328,10 +328,10 @@
       opacity: 1;
       text-align: center;
     }
-    .v22_190 {
+    .photo1Text {
       width: 242px;
       height: 256px;
-      background: url("../images/v22_190.png");
+      background: url("../images/photo1Text.png");
       background-repeat: no-repeat;
       background-position: center center;
       background-size: cover;
