--- a/frontend/src/aboutus.html
+++ b/frontend/src/aboutus.html
@@ -1,8 +1,48 @@
-<!DOCTYPE html><html><head><link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet" /><link href="https://fonts.googleapis.com/css?family=Radley&display=swap" rel="stylesheet" /></head><body><div class="pageBG"><span class="aboutUsText">ABOUT US</span><span class="copyrightText">copyright Ⓒ</span><div class="photo4OuterBG"><div class="photo4BottomImage"></div><div class="photo4BottomBG"></div><span class="photo4Text">John Doe Doe
-    Lead Engineer</span></div><div class="photo2OuterBG"><div class="photo2BottomImage"></div><div class="photo2BottomBG"></div><span class="photo2Text">Jane Doe Doe
-    UX Designer</span></div><div class="photo5OuterBG"><div class="photo5BottomImage"></div><div class="photo5BottomBG"></div><span class="photo5Text">Jane Doe Doe</span></div><div class="photo3OuterBG"><div class="photo3BottomImage"></div><div class="photo3BottomBG"></div><span class="photo3Text">Kim Chi Soup
-    UX Desginer</span></div><div class="photo6OuterBG"><div class="photo6BottomImage"></div><span class="photo6BottomBG">John Doe Doe</span><div class="photo6Text"></div></div><div class="photo1OuterBG"><div class="photo1BottomImage"></div><span class="photo1BottomBG">Juan Rodriguez
-    Lead Engineer</span><div class="photo1Text"></div></div><div class="name"></div><div class="v22_136"><div class="v22_137"></div><div class="v22_138"></div><div class="v22_139"></div><div class="v22_140"><div class="v22_141"></div><span class="v22_142">About Us</span></div></div></div></body></html> <br/><br/> <style>* {
+<!DOCTYPE html>
+<html>
+  <head><link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet" /><link href="https://fonts.googleapis.com/css?family=Radley&display=swap" rel="stylesheet" />
+  </head>
+  
+  <body>
+    <div class="pageBG">
+      <span class="aboutUsText">ABOUT US</span><span class="copyrightText">copyright Ⓒ</span>
+      <div class="photo4OuterBG">
+        <div class="photo4BottomImage"></div>
+        <div class="photo4BottomBG"></div>
+        <span class="photo4Text">John Doe Doe Lead Engineer</span></div>
+        <div class="photo2OuterBG">
+          <div class="photo2BottomImage"></div>
+          <div class="photo2BottomBG"></div>
+          <span class="photo2Text">Jane Doe Doe UX Designer</span></div>
+          <div class="photo5OuterBG">
+            <div class="photo5BottomImage"></div>
+            <div class="photo5BottomBG"></div>
+            <span class="photo5Text">Jane Doe Doe</span></div>
+            <div class="photo3OuterBG">
+              <div class="photo3BottomImage"></div>
+              <div class="photo3BottomBG"></div>
+              <span class="photo3Text">Kim Chi Soup UX Desginer</span></div>
+              <div class="photo6OuterBG">
+                <div class="photo6BottomImage"></div>
+                <span class="photo6BottomBG">John Doe Doe</span>
+                <div class="photo6Text"></div></div>
+                <div class="photo1OuterBG">
+                  <div class="photo1BottomImage"></div>
+                  <span class="photo1BottomBG">Juan Rodriguez Lead Engineer</span>
+                  <div class="photo1Text"></div></div>
+                  <div class="name"></div>
+                  <div class="v22_136">
+                    <div class="v22_137"></div>
+                    <div class="v22_138"></div>
+                    <div class="v22_139"></div>
+                    <div class="v22_140">
+                      <div class="v22_141"></div>
+                      <span class="v22_142">About Us</span></div></div>
+     </div>
+  </body>
+</html> <br/><br/> 
+
+<style>* {
       box-sizing: border-box;
     }
     body {
