--- a/frontend/src/aboutus.html
+++ b/frontend/src/aboutus.html
@@ -6,10 +6,10 @@
   <body>
     <div class="pageBG">
       <span class="aboutUsText">ABOUT US</span><span class="copyrightText">copyright Ⓒ</span>
-      <div class="photo4OuterBG">
+      <a href="./login.html"><div class="photo4OuterBG">
         <div class="photo4BottomImage"></div>
         <div class="photo4BottomBG"></div>
-        <span class="photo4Text">John Doe Doe Lead Engineer</span></div>
+        <span class="photo4Text">John Doe Doe Lead Engineer</span></div></a>
         <div class="photo2OuterBG">
           <div class="photo2BottomImage"></div>
           <div class="photo2BottomBG"></div>
@@ -28,7 +28,7 @@
                 <div class="photo6Text"></div></div>
                 <div class="photo1OuterBG">
                   <div class="photo1BottomImage"></div>
-                  <span class="photo1BottomBG">Juan Rodriguez Lead Engineer</span>
+                  <span class="photo1BottomBG">Jade Wing Ki Au</span>
                   <div class="photo1Text"></div></div>
                   <div class="name"></div>
                   <div class="v22_136">
