--- a/frontend/src/aboutus.html
+++ b/frontend/src/aboutus.html
@@ -9,27 +9,27 @@
       <a href="./login.html"><div class="photo4OuterBG">
         <div class="photo4BottomImage"></div>
         <div class="photo4BottomBG"></div>
-        <span class="photo4Text">John Doe Doe Lead Engineer</span></div></a>
+        <span class="photo4Text">Jonathan Yanez Backend Coder</span></div></a>
         <div class="photo2OuterBG">
           <div class="photo2BottomImage"></div>
           <div class="photo2BottomBG"></div>
-          <span class="photo2Text">Jane Doe Doe UX Designer</span></div>
+          <span class="photo2Text">Agenor Rodriguez &nbsp Frontend Coder</span></div>
           <div class="photo5OuterBG">
             <div class="photo5BottomImage"></div>
             <div class="photo5BottomBG"></div>
-            <span class="photo5Text">Jane Doe Doe</span></div>
+            <span class="photo5Text">Jiten Lama  Backend Coder</span></div>
             <div class="photo3OuterBG">
               <div class="photo3BottomImage"></div>
               <div class="photo3BottomBG"></div>
-              <span class="photo3Text">Kim Chi Soup UX Desginer</span></div>
+              <span class="photo3Text">Jaspreet Singh UX Desginer</span></div>
               <div class="photo6OuterBG">
                 <div class="photo6BottomImage"></div>
-                <span class="photo6BottomBG">John Doe Doe</span>
-                <div class="photo6Text"></div></div>
+                <span class="photo6Text">Varsha Singh  Frontend Coder</span>
+                <div class="photo6BottomBG"></div></div>
                 <div class="photo1OuterBG">
-                  <div class="photo1BottomImage"></div>
-                  <span class="photo1Text">Jade Wing Ki Au</span>
-                  <div class="photo1BottomBG"></div></div>
+                  <div class="photo1BottomBG"></div>
+                  <span class="photo1Text">Jade Wing Ki Au &nbsp Lead Designer</span>
+                  <!--<div class="photo1BottomBGOld"></div>--></div>
                   <div class="name"></div>
                   <div class="v22_136">
                     <div class="v22_137"></div>
@@ -97,7 +97,7 @@
       box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
       overflow: hidden;
     }
-    .photo1BottomImage {
+    .photo1BottomBG {
       width: 242px;
       height: 65px;
       background: rgba(123,162,222,1);
@@ -118,10 +118,10 @@
       opacity: 1;
       text-align: center;
     }
-    .photo1BottomBG {
+    .photo1BottomBGOld {
       width: 242px;
       height: 256px;
-      /*background: url("../images/photo1BottomBG.png");*/
+      /*background: url("../images/photo1BottomBGOld.png");*/
       background-repeat: no-repeat;
       background-position: center center;
       background-size: cover;
@@ -172,14 +172,15 @@
       left: 0px;
     }
     .photo2Text {
-      width: 120px;
+      width: 150px;
+      height: 48px;
       color: rgba(255,255,255,1);
       position: absolute;
       top: 267px;
       left: 63px;
       font-family: Radley;
       font-weight: Regular;
-      font-size: 20px;
+      font-size: 19px;
       opacity: 1;
       text-align: center;
     }
@@ -222,7 +223,7 @@
       box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     }
     .photo3Text {
-      width: 124px;
+      width: 140px;
       color: rgba(255,255,255,1);
       position: absolute;
       top: 270px;
@@ -272,7 +273,7 @@
       box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     }
     .photo4Text {
-      width: 128px;
+      width: 140px;
       color: rgba(255,255,255,1);
       position: absolute;
       top: 268px;
@@ -323,7 +324,7 @@
       left: 0px;
     }
     .photo5Text {
-      width: 124px;
+      width: 140px;
       color: rgba(255,255,255,1);
       position: absolute;
       top: 260px;
@@ -358,22 +359,22 @@
       top: 253px;
       left: 0px;
     }
-    .photo6BottomBG {
-      width: 131px;
+    .photo6Text {
+      width: 140px;
       color: rgba(255,255,255,1);
       position: absolute;
       top: 258px;
       left: 58px;
       font-family: Radley;
       font-weight: Regular;
-      font-size: 20px;
+      font-size: 19px;
       opacity: 1;
       text-align: left;
     }
-    .photo6Text {
+    .photo6BottomBG {
       width: 246px;
       height: 256px;
-      background: url("../images/photo6Text.png");
+      background: url("../images/photo6BottomBG.png");
       background-repeat: no-repeat;
       background-position: center center;
       background-size: cover;
