--- a/frontend/src/aboutus.html
+++ b/frontend/src/aboutus.html
@@ -6,14 +6,16 @@
   <body>
     <div class="pageBG">
       <span class="aboutUsText">ABOUT US</span><span class="copyrightText">copyright Ⓒ</span>
-      <a href="./login.html"><div class="photo4OuterBG">
+      <a href="./login.html">
+        <div class="photo4OuterBG">
         <div class="photo4BottomImage"></div>
         <div class="photo4BottomBG"></div>
         <span class="photo4Text">Jonathan Yanez Backend Coder</span></div></a>
-        <div class="photo2OuterBG">
+        <a href="./login.html">
+          <div class="photo2OuterBG">
           <div class="photo2BottomImage"></div>
           <div class="photo2BottomBG"></div>
-          <span class="photo2Text">Agenor Rodriguez &nbsp Frontend Coder</span></div>
+          <span class="photo2Text">Agenor Rodriguez &nbsp Frontend Coder</span></div></a>
           <div class="photo5OuterBG">
             <div class="photo5BottomImage"></div>
             <div class="photo5BottomBG"></div>
