--- a/frontend/src/login.html
+++ b/frontend/src/login.html
@@ -57,7 +57,7 @@
           </div>
         </div>
         </a>
-        <a href="./googleLogin.html"><div class="googleButtonGreenBG">
+        <a href="./aboutus.html"><div class="googleButtonGreenBG">
           <div class="googleButtonWhiteBGRounded"></div>
           <span class="googleButtonText">Google</span>
           <div class="googleButtonSmallSquare">
