--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,13 +4,13 @@
     <head>
     </head>
     
-    <body><div class="pageBG"><span class="logoOuterBG"><img src="../src/dot-small-logo.png" height="140" width="140">&nbsp Dot</span><span class="sloganBG">Dating and social app dedicated for people with physical disabilities. 
+    <body><div class="pageBG"><span class="logoOuterBG"><img src="./dot-small-logo.png" height="140" width="140">&nbsp Dot</span><span class="sloganBG">Dating and social app dedicated for people with physical disabilities. 
 
     </span>
     
     <!--<div class="v2_12"></div>-->
     <div class="wavyBG"></div>
-    <a href="../src/login.html">
+    <a href="./login.html">
     <div class="signupButtonOuterBG">
         <div class="signupButtonInnerBG"></div>
         <span class="signupButtonText">Sign up</span>
